--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,18 @@ h3 {
     margin: 3rem 0;
 }
 
+/* footer */
+.footer {
+    background-color: var(--primarioOscuro);
+    padding: 1rem 0;
+    margin-top: 2rem;
+}
+.footer__texto {
+    font-family: var(--fuentePrincipal);
+    text-align: center;
+    font-size: 2rem;
+}
+
 /* Navegacion */
 .navegacion {
     background-color: var(--primarioOscuro);
@@ -76,6 +88,7 @@ h3 {
     color: var(--blanco);
     font-size: 3rem;
 }
+
 .navegacion_enlace--activo,
 .navegacion_enlace:hover {
     color: var(--secundario);
